--- a/Projeto/src/projeto/LT1.fxml
+++ b/Projeto/src/projeto/LT1.fxml
@@ -8,15 +8,15 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="802.0" prefWidth="795.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="projeto.O1Controller">
+<AnchorPane id="AnchorPane" prefHeight="802.0" prefWidth="795.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="projeto.LT1Controller">
    <children>
       <Label fx:id="label" layoutX="126" layoutY="120" minHeight="16" minWidth="69" />
-      <Label layoutX="303.0" layoutY="76.0" text="Lei de Ohm">
+      <Label layoutX="271.0" layoutY="71.0" text="Lei das Tensões">
          <font>
             <Font name="Candara Light" size="40.0" />
          </font>
       </Label>
-      <Button layoutX="20.0" layoutY="72.0" mnemonicParsing="false" onAction="#ir_TelaOHM" prefHeight="48.0" prefWidth="141.0" style="-fx-background-color: white;">
+      <Button layoutX="20.0" layoutY="72.0" mnemonicParsing="false" onAction="#ir_TelaOHM" prefHeight="48.0" prefWidth="184.0" style="-fx-background-color: white;">
          <graphic>
             <ImageView>
                <image>
@@ -30,32 +30,14 @@
             <Font name="Candara Light" size="24.0" />
          </font>
       </Label>
-      <ImageView fitHeight="258.0" fitWidth="231.0" layoutX="46.0" layoutY="342.0">
-         <image>
-            <Image url="@../Icones/O1.PNG" />
-         </image>
-      </ImageView>
       <TextField fx:id="R1_O1" alignment="CENTER" layoutX="65.0" layoutY="331.0" prefHeight="25.0" prefWidth="193.0" promptText="R1" style="-fx-background-color: white;" />
       <TextField fx:id="R2_O1" layoutX="246.0" layoutY="459.0" prefHeight="25.0" prefWidth="76.0" promptText="R2" style="-fx-background-color: white;" />
       <Button layoutX="342.0" layoutY="661.0" mnemonicParsing="false" onAction="#calcular" prefHeight="41.0" prefWidth="127.0" style="-fx-background-color: white; -fx-border-color: black;" text="Calcular" />
-      <ImageView fx:id="circuitoO1" fitHeight="278.0" fitWidth="267.0" layoutX="505.0" layoutY="343.0">
-         <image>
-            <Image url="@../Icones/Ohm%20simplificado.png" />
-         </image>
-      </ImageView>
-      <Label fx:id="req" layoutX="725.0" layoutY="476.0" prefHeight="17.0" prefWidth="51.0" text="Req" />
-      <Label fx:id="v" alignment="TOP_RIGHT" contentDisplay="RIGHT" layoutX="477.0" layoutY="474.0" prefHeight="17.0" prefWidth="69.0" text="Vfem" />
-      <Label fx:id="I" alignment="CENTER" layoutX="604.0" layoutY="370.0" prefHeight="17.0" prefWidth="69.0" text="I_total" />
       <TextField fx:id="V_O1" layoutX="12.0" layoutY="457.0" prefHeight="25.0" prefWidth="51.0" promptText="Vfem" style="-fx-background-color: white;">
          <font>
             <Font size="13.0" />
          </font>
       </TextField>
       <TextField fx:id="R3_O1" alignment="CENTER" layoutX="60.0" layoutY="589.0" prefHeight="25.0" prefWidth="193.0" promptText="R3" style="-fx-background-color: white;" />
-      <ImageView fx:id="seta" fitHeight="200.0" fitWidth="200.0" layoutX="497.0" layoutY="327.0" scaleX="0.2" scaleY="0.2">
-         <image>
-            <Image url="@../Icones/seta.png" />
-         </image>
-      </ImageView>
    </children>
 </AnchorPane>
